--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
     "vite": "^7.1.0",
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://Sukkrajurng.github.io/flashdrivepj.git"
+  "homepage": "https://Sukkrajurng.github.io/flashdrivepj"
 }
